tests/paczka1/small_fuzzy/97250812.err
Error in line 5: TpFAoJcT2c A201 21,43
Error in line 10: TpFAoJcT2c A201 83,3
Error in line 12: TpFAoJcT2c A404 34,6
